Changed CSI-ICON in education

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class='ui one centered raised cards'>
                 <div class='fluid card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/CSI-icon.jpg'>
+                        <img src='../images/CSI-icon.jpg'>
                     </div>
                     <div class='content'>
                         <div class='header'> College of Staten Island </div>
