Fixed image urls

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/image.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/card.css">
@@ -61,7 +61,7 @@
             <div class='ui one centered raised cards'>
                 <div class='fluid card'>
                     <div class='ui centered circular image small'>
-                        <img src='../images/CSI-icon.jpg'>
+                        <img src='images/CSI-icon.jpg'>
                     </div>
                     <div class='content'>
                         <div class='header'> College of Staten Island </div>
@@ -92,7 +92,7 @@
                 <!-- MCJROTC Volunteer BEGIN -->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/USJROTC-icon.png'>
+                        <img src='images/USJROTC-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> United States Junior Reserve Officers' Training Crops </div>
@@ -114,7 +114,7 @@
                 <!-- GDC Volunteer BEGIN -->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/GDC-icon.ico'>
+                        <img src='images/GDC-icon.ico'>
                     </div>
                     <div class='content'>
                         <div class='header'> C.S.I. Game Development Club </div>
@@ -137,7 +137,7 @@
                 <!-- CSI Volunteer BEGIN -->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/CSI-icon.jpg'>
+                        <img src='images/CSI-icon.jpg'>
                     </div>
                     <div class='content'>
                         <div class='header'> College of Staten Island </div>
@@ -175,7 +175,7 @@
                 <!-- SQL Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/ssms.ico'>
+                        <img src='images/ssms.ico'>
                     </div>
                     <div class='content'>
                         <div class='header'> SQL </div>
@@ -187,7 +187,7 @@
                 <!-- C# Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/c-icon.png'>
+                        <img src='images/c-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> C# </div>
@@ -199,7 +199,7 @@
                 <!-- HTML5 Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/html5-circle-icon.png'>
+                        <img src='images/html5-circle-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> HTML 5 </div>
@@ -211,7 +211,7 @@
                 <!-- CSS3 Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/CSS3-icon.png'>
+                        <img src='images/CSS3-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> CSS 3 </div>
@@ -223,7 +223,7 @@
                 <!-- C++ Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/c++-icon.png'>
+                        <img src='images/c++-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> C++ </div>
@@ -235,7 +235,7 @@
                 <!-- MySQL Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/MySQL-icon.png'>
+                        <img src='images/MySQL-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> MySQL </div>
@@ -247,7 +247,7 @@
                 <!-- Java Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/Java-icon.png'>
+                        <img src='images/Java-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> Java </div>
@@ -259,7 +259,7 @@
                 <!-- ASP.NET Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/ASPdotNET-icon.png'>
+                        <img src='images/ASPdotNET-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> ASP.NET </div>
@@ -271,7 +271,7 @@
                 <!-- JavaScript Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='/images/js-icon.png'>
+                        <img src='images/js-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> JavaScript </div>
@@ -458,7 +458,7 @@
 ========== Skill Card Template ==========
 <div class='card'>
     <div class='ui centered circular image small'>
-        <img src='/images/...'>
+        <img src='images/...'>
     </div>
     <div class='content'>
         <div class='header'> Title </div>
