renamed Java image

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <!-- Java Skill Card BEGIN-->
                 <div class='card'>
                     <div class='ui centered circular image small'>
-                        <img src='images/Java-icon.png'>
+                        <img src='images/ja-icon.png'>
                     </div>
                     <div class='content'>
                         <div class='header'> Java </div>
