Fixed spelling issue in Volunteer section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <img src='images/USJROTC-icon.png'>
                     </div>
                     <div class='content'>
-                        <div class='header'> United States Junior Reserve Officers' Training Crops </div>
+                        <div class='header'> United States Junior Reserve Officers' Training Corps </div>
                         <div class='description'>
                             <div class='ui left aligned bulleted list'>
                                 <div class='item'>
