Made cards mobile friendly

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
 
             <h3>Volunteer</h3>
-            <div class='ui three centered raised cards'>
+            <div class='ui three centered stackable raised cards'>
 
                 <!-- MCJROTC Volunteer BEGIN -->
                 <div class='card'>
@@ -184,7 +184,7 @@
 
             <h1>Skills</h1>
 
-            <div class='ui three centered raised cards'>
+            <div class='ui three centered stackable raised cards'>
 
                 <!-- SQL Skill Card BEGIN-->
                 <div class='card'>
@@ -307,7 +307,7 @@
 
             <h1>Work Experiences</h1>
 
-            <div class='ui two centered raised cards'>
+            <div class='ui two centered stackable raised cards'>
 
                 <!-- Online Computers Experience BEGIN -->
                 <div class='ui fluid card'>
