Switch title for Volunteer cards

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                         <img src='images/USJROTC-icon.png'>
                     </div>
                     <div class='content'>
-                        <div class='header'> United States Junior Reserve Officers' Training Corps </div>
+                        <div class='header'> Cadet Staff Sergeant </div>
+                        <div class='meta'> United States Junior Reserve Officers' Training Corps </div>
                         <div class='description'>
                             <div class='ui left aligned bulleted list'>
                                 <div class='item'>
@@ -139,7 +140,8 @@
                         <img src='images/GDC-icon.ico'>
                     </div>
                     <div class='content'>
-                        <div class='header'> C.S.I. Game Development Club </div>
+                        <div class='header'> President/Founder </div>
+                        <div class='meta'>C.S.I. Game Development Club</div>
                         <div class='description'>
                             <div class='ui left aligned bulleted list'>
                                 <div class='item'>
@@ -162,7 +164,8 @@
                         <img src='images/CSI-icon.jpg'>
                     </div>
                     <div class='content'>
-                        <div class='header'> College of Staten Island </div>
+                        <div class='header'> Assistant Teacher </div>
+                        <div class='meta'> College of Staten Island </div>
                         <div class='description'>
                             <div class='ui left aligned bulleted list'>
                                 <div class='item'>
