Changed AboutMe, and Experience Descriptions, as well as other small changes

--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
         <div class="container">
 
             <h1>About Me</h1>
-            <p>
-                Hi! My name is Gabriel Goldstein. I love to code and learn new things. I like to find new and exciting ways to peform tasks
-                more efficently.
+            <p style = text-align:left;>
+                Hi! My name is Gabriel Goldstein. 
+                A highly energetic and motivated Software Developer with skills in C#, Unity3D, ASP.NET, JavaScript, and much more.
+                Looking for a challenging and engaging work environment to gain experience in the programming field. 
+                With 4+ years of leadership experience stemming from military experience, various college research projects, and in a commercial enviornment. 
+                Graduated with a Bachelor's of Science focused in Computer Science with a Specialization in Game Programming from the College of Staten Island. 
+                I enjoy challenging myself by learning new languages as well as new techniques for effectively completing a task and adaptive management styles that will better benefit my team.
             </p>
 
             <h3>Education</h3>
@@ -314,7 +318,7 @@
 
             <h1>Work Experiences</h1>
 
-            <div class='ui two centered stackable raised cards'>
+            <div class='ui one centered stackable raised cards'>
 
                 <!-- Online Computers Experience BEGIN -->
                 <div class='ui fluid card'>
@@ -327,14 +331,31 @@
                         <div class='description'>
                             <div class='ui left aligned bulleted list'>
                                 <div class='item'>
-                                    Lead Developer and architect leading a team of 8 developers in the development of a web based CRM software using ASP.NET,
-                                    C#, SQL Server, and other frameworks/libraries
+                                    Lead a team of 8 developers in the development of a web based CRM software using ASP.NET, C#, SQL Server, JavaScript, and other frameworks/libraries.
                                 </div>
                                 <div class='item'>
-                                    Used Jira to Build timelines, design sprints, and delegate tasks to members of the team
+                                    Used Bootstrap and Semantic UI to create sleek and modern user interfaces.
                                 </div>
                                 <div class='item'>
-                                    Worked as a Full Stack developer working in all aspects of the programming
+                                    Wrote stored procedures, created tables, and modified tables in Microsoft SQL Server using SQL server Management Studio.
+                                </div>
+                                <div class='item'>
+                                    Worked with customers to create user requirements.    
+                                </div>
+                                <div class='item'>
+                                    Worked as/with designers communicating user requirements to create a sleek and modern UI design.
+                                </div>
+                                <div class='item'>
+                                    Worked as/with database architects to develop detailed data models for logical and conceptual database designs as well as implement those designs.
+                                </div>
+                                <div class='item'>
+                                    Read through user feedback to determine improvements for the software.
+                                </div>
+                                <div class='item'>
+                                    Used JavaScript to handle client side features allowing to reduce the load on back end features.
+                                </div>
+                                <div class='item'>
+                                    Worked with Company Owner, Project Manager, and Customers to create timelines, designing sprints, and delegating tasks to member of the team using JIRA.
                                 </div>
                             </div>
                         </div>
@@ -342,6 +363,7 @@
                 </div>
                 <!-- Online Computers Experience END -->
 
+                <br/>
 
                 <!-- Research Project Experience BEGIN -->
                 <div class='ui fluid card'>
@@ -351,18 +373,22 @@
                             <span class='right floated'>8/2015 - 11/2016</span>
                             <span class='left floated'>College of Staten Island</span>
                         </div>
+                        
                         <div class='description'>
                             <div class='ui left aligned bulleted list'>
                                 <div class='item'>
-                                    Created a game in Unity using C# and Microsoft Kinect V2 to help autistic children build teamwork and other autistic children
-                                    and to research a game's ability to stimulate learning and emotional recognition
+                                    Lead a team of 5+ developers in creating a game in Unity using C# and Microsoft Kinect V2 to help autistic children build teamwork with other autistic children and to research a game's ability to stimulate learning and emotional recognition
                                 </div>
                                 <div class='item'>
-                                    Lead Developer and manager of a team of student developers in a multi discipline project with Computer Science Department,
-                                    Psychology Department, and the Game Development Club at the College of Staten Island
+                                    Conducted detailed user testing using the results and user feedback to design and implement improvements to the user experience.
                                 </div>
                                 <div class='item'>
-                                    Presented at several academic conferences
+                                    Demoed the game at several academic conferences such as: 
+                                    "SRCD Technology and Media in Children's Development Conference"
+                                    &
+                                    "CUNY Games Festival 2016"
+                                    &
+                                    "CSI Undergraduate Conference on Research, Scholarship, and Performance 2016"
                                 </div>
                             </div>
                         </div>
@@ -370,6 +396,7 @@
                 </div>
                 <!-- Research Project Experience END -->
 
+                <br/>
 
                 <!-- Adjunct Lab Tech Experience BEGIN -->
                 <div class='ui fluid card'>
@@ -400,6 +427,7 @@
                 </div>
                 <!-- Adjunct Lab Tech Experience END -->
 
+                <br/>
 
                 <!-- NYC Park Internship Tech Experience BEGIN -->
                 <div class='ui fluid card'>
@@ -424,6 +452,8 @@
                     </div>
                 </div>
                 <!-- NYC Park Internship Tech Experience END -->
+
+                <br/>
 
             </div>
 
