Added Project Section, bolded some hard to see text, Section color chang

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
 
             <h1>About Me</h1>
-            <p style = text-align:left;>
+            <p style = 'text-align:left; font-weight:bold;' >
                 Hi! My name is Gabriel Goldstein. 
                 A highly energetic and motivated Software Developer with skills in C#, Unity3D, ASP.NET, JavaScript, and much more.
                 Looking for a challenging and engaging work environment to gain experience in the programming field. 
@@ -463,8 +463,41 @@
 
 
 
+    <!-- Project Section BEGIN -->
+    <section class='section section-b'>
+        <div class='container'>
+
+            <h1>Works/Projects</h1>
+
+            <div class='ui three centered stackable raised cards'>
+
+                <!-- Count Down Landing Page BEGIN -->
+                <div class='ui card'>
+                    <div class='image'>
+                        <img src='images/CountDownLandingPage_Thumbnail.PNG'>
+                    </div>
+                    <div class='content'>
+                        <a href='https://gabrielgoldstein.github.io/CountDownLandingPage/' class='header'>Countdown Landing Page</a>
+                        <div class='description'>
+                            Created a placeholder for a website doman. 
+                            Allowing for customers to see the website and when to expect it to launch.
+                            Can be easily repurposed for other projects.
+                        </div>
+                    </div>
+
+                </div>                
+                <!-- Count Down Landing Page END -->
+
+            </div>
+
+        </div>
+    </section>
+    <!-- Project Section BEGIN -->
+
+
+
     <!-- Contact Me Section BEGIN -->
-    <section class="section section-b">
+    <section class="section section-a">
         <div class="container">
 
             <h1>Contact Me</h1>
