--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="header-overlay"></div>
 
         <div class="header-content">
+            <img class='ui medium centered circular image' src='images/favicon.ico'>
             <h1 class="animated infinite bounce title">Welcome to my website!!<i class="fa fa-hand-peace-o fa-1x"></i></h1>
             <p class="desktop animated swing">
                 Hi! I'm Gabriel Goldstein &amp; I'm a Software Developer trying to learn as much as i can to then pass that knowledge on.
