Figuring out the homepage flex layout.

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,7 +1,4 @@
  
-  
-
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,17 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    
+    <script src="https://kit.fontawesome.com/41bf82bebd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/homepage.css">
 </head>
 
 <body>
 
   <div class="container">
-    <div class="box box1">1</div>
-    <div class="box box2">
-        2
-        <p>This is more test</p>
+    
+    <div class="flex-twothird"> 
+      <div class="card single-card">
+        <h2 class="card-header"><i class="fas fa-home"></i>Welcome to my page!</h2> 
+        <h4>Information:</h4>
+        <p>information about stuff cause its stuff that can be stuff that stuff could be shown as stuff cause ... stuff</p>
+        <p>Its ugly. I know</p>
+      </div>
+      <div class="card two-cards test">Card 1</div>
+      <div class="card two-cards test">Card 2</div>
+      <div class="card single-card test">Card 3</br>Stuff</div>
+      <div class="card single-card test">Card 4</div>
+      <div class="card three-cards test">Card 5</div>
+      <div class="card three-cards test">Card 6</div>
+      <div class="card three-cards test">Card 7</div>
+
+      <div class="card four-cards test">8</div>
+      <div class="card four-cards test">9</div>
+      <div class="card four-cards test">10</div>
+      <div class="card four-cards test">11</div>
     </div>
+
+    <div class="flex-onethird">
+      <div class="card side-nav-card">
+        <h2 class="card-header"><i class="fas fa-link"></i>Quick Links
+        </h2>
+        <div class="card-content">
+          This is content
+          <ul class="quick-link-list">
+            <li><a href="http://gabrielgoldstein.website" target="_blank">Landing Page</a></li> 
+            <li><a href="" target="_blank">Google</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+            <li><a href="" target="_blank">Test</a></li>      
+          </ul>
+        </div> 
+      </div>
+      <div class="card single-card test">Side 1</div>
+      <div class="card single-card test">Side 2</div>
+      <div class="card single-card test">Side 3</div>
+      <div class="card single-card test">Side 4</div> 
+    </div>
+
+    <div class="flex-page">
+      <div class="card single-card test">This should span the whole page content</div>
+    </div>
+
+
+
+    <div class="box box1">1</div>
+    <div class="box box2">2<p>This is more test</p></div>
     <div class="box box3">3</div>
     <div class="box box4">4</div>
     <div class="box box5">5</div>
